---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: ?
  Changes:
    - fixed crashes with bitumen
    - retorter now has fixed_recipe = 'kerogen-extraction'
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2022-12-19
  Changes:
    - fixed that copper and iron from tailings wasnt properly disabled.
    - fixed several double unlocks in techs.
    - increased vanadium oxide and reduced vanadium pulp 3 output from the vanadium pulp 3 recipe.
    - increased the energy usage of cracker mk01 and fracking rig.
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2022-11-28
  Changes:
    - doubled output of anthraquinone in several recipes.
    - tweaks for gunpowder.
    - added coal gas from coalbed gas.
    - added fuel values for new tar fluids.
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2022-11-03
  Changes:
    - Moved several recipes from the ddc to tar processing unit. tar refining, tar refining tops, carbolic oil to creosote, naphalene oil too creosote.
    - moved anthracene oil to carbon black to reformer.
    - corrected typo in steam tempurature of anthracene to anthraquinone from 105 to 150.
    - removed vanilla refinery and moved shale oil to reformer.
    - moved anthraquinone from naphthalene to reformer.
    - removed lead plate and titanium plate from reformer.
    - adjusted rocket silo result inventory size to 50.
    - changed retorter cost from 200 to 20 stone brick, 500 to 20 pipe, 300 to 30 steel plates.
    - reduced kerogen to shale oil recipe craft time to 5 from 15.
    - increased kerogen to shale oil output to 250 from 100.
    - added compatibiltiy for loader redux with small parts
    - pitch cracking coke output reduced to 10 from 30.